@@ -1,5 +1,8 @@
 2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/main.cc (do_chroot_jail): Small cleanups.  Avoid constant
+	error messages.
+
 	* flower/libc-extension.cc:
 	* flower/include/libc-extension.hh: [Open]BSD fixes for
 	cookie/funopen declarations.
